modification to check process CPU usage rather than general CPU Usage